--- a/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -27,6 +27,22 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            failure:
+              properties:
+                port:
+                  type: string
+                probability:
+                  type: uint
+                server:
+                  type: string
+              required:
+              - server
+              - port
+              - probability
+              type: object
+          required:
+          - failure
           type: object
         status:
           type: object
