Add pod creation

--- a/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -27,6 +27,25 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            failure:
+              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                Important: Run "make" to regenerate code after modifying this file'
+              properties:
+                port:
+                  type: string
+                probability:
+                  format: int64
+                  type: integer
+                server:
+                  type: string
+              required:
+              - server
+              - port
+              - probability
+              type: object
+          required:
+          - failure
           type: object
         status:
           type: object
