--- a/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -5,5 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: dependencyfailureinjection-sample
 spec:
-  # Add fields here
-  foo: bar
+  failure:
+    server: localhost
+    port: 1234/tcp
+    probability: 50
