Add label selector to CRD

--- a/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -44,8 +44,11 @@ spec:
               - port
               - probability
               type: object
+            labelSelector:
+              type: string
           required:
           - failure
+          - labelSelector
           type: object
         status:
           type: object
