--- a/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -6,6 +6,7 @@ metadata:
   name: dependencyfailureinjection-sample
 spec:
   failure:
-    server: localhost
+    host: localhost
     port: 1234/tcp
     probability: 50
+  labelSelector: "foo=bar"
