add standard labels to helm chart

--- a/k8s/chaos-fi-controller/templates/clusterrole.yaml
+++ b/k8s/chaos-fi-controller/templates/clusterrole.yaml
@@ -4,6 +4,12 @@ kind: ClusterRole
 metadata:
   creationTimestamp: null
   name: chaos-fi-controller-manager-role
+  labels:
+    app: {{ $.Chart.Name }}
+    chart_name: {{ $.Chart.Name }}
+    chart_version: {{ $.Chart.Version }}
+    service: {{ $.Chart.Name }}
+    team: {{ $.Values.team }}
 rules:
 - apiGroups:
   - ""
