--- a/k8s/chaos-fi-controller/templates/secret.yaml
+++ b/k8s/chaos-fi-controller/templates/secret.yaml
@@ -3,4 +3,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: chaos-fi-controller-webhook-server-secret
-  namespace: chaos-fi-controller
+  namespace: {{ $.Release.Namespace }}
+  app: {{ $.Chart.Name }}
+  chart_name: {{ $.Chart.Name }}
+  chart_version: {{ $.Chart.Version }}
+  service: {{ $.Chart.Name }}
+  team: {{ $.Values.team }}
