--- a/k8s/chaos-fi-controller/templates/clusterrole.yaml
+++ b/k8s/chaos-fi-controller/templates/clusterrole.yaml
@@ -46,6 +46,13 @@ rules:
   - update
   - patch
 - apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
   - admissionregistration.k8s.io
   resources:
   - mutatingwebhookconfigurations
