--- a/k8s/chaos-fi-controller/templates/namespace.yaml
+++ b/k8s/chaos-fi-controller/templates/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: chaos-fi-controller
+  name: {{ $.Release.Namespace }}
   labels:
     admission.datadoghq.com/mutate-pods: "true"
     admission.datadoghq.com/validate-pods: "true"
