use labels.Selector type instead of just string

--- a/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -48,11 +48,11 @@ spec:
               - probability
               - protocol
               type: object
-            labelSelector:
-              type: string
+            selector:
+              type: object
           required:
           - failure
-          - labelSelector
+          - selector
           type: object
         status:
           properties:
