--- a/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_dependencyfailureinjection.yaml
@@ -11,4 +11,5 @@ spec:
     port: 80
     probability: 50
     protocol: tcp
-  labelSelector: "app=chaos-fi-demo-curl"
+  selector:
+    app: chaos-fi-demo-curl
