Add datadog metrics and events

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,3 +35,7 @@ required = [
 name = "gopkg.in/fsnotify.v1"
 source = "https://github.com/fsnotify/fsnotify.git"
 version="v1.4.7"
+
+[[override]]
+name = "github.com/DataDog/datadog-go"
+branch = "master"
