--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ---
 variables:
-  CURRENT_CI_IMAGE: 0.0.2
+  CURRENT_CI_IMAGE: 0.0.3
 
 stages:
   - ci-image
@@ -43,10 +43,10 @@ build:make:
   tags:
     - "runner:docker"
     - "size:large"
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:0.0.1
   stage: release
   script:
-    - env
-    - ./ci/release.sh
+    - release.sh
 
 release-ref:
   <<: *release
