--- a/config/crds/chaos_v1beta1_networkfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_networkfailureinjection.yaml
@@ -50,6 +50,10 @@ spec:
               - probability
               - protocol
               type: object
+            numPodsToTarget:
+              format: int64
+              minimum: 0
+              type: integer
             selector:
               type: object
           required:
@@ -63,8 +67,11 @@ spec:
                 of cluster Important: Run "make" to regenerate code after modifying
                 this file'
               type: boolean
+            injected:
+              type: boolean
           required:
           - finalizing
+          - injected
           type: object
   version: v1beta1
 status:
