--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: chaos-fi-controller:latest
+      - image: docker.io/library/chaos-fi-controller:latest
         name: manager
