alows multiple hosts to be defined in a Network Failure Injection

--- a/config/crds/chaos_v1beta1_networkfailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_networkfailureinjection.yaml
@@ -32,8 +32,10 @@ spec:
           properties:
             failure:
               properties:
-                host:
-                  type: string
+                hosts:
+                  items:
+                    type: string
+                  type: array
                 port:
                   format: int64
                   type: integer
