--- a/config/samples/chaos_v1beta1_networkfailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_networkfailureinjection.yaml
@@ -6,7 +6,8 @@ metadata:
   name: networkfailureinjection-sample
 spec:
   failure:
-    host: 10.0.0.0/8
+    host:
+      - 10.0.0.0/8
     port: 80
     probability: 100
     protocol: tcp
