Add NodeFailure shutdown field

--- a/config/crds/chaos_v1beta1_nodefailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_nodefailureinjection.yaml
@@ -36,6 +36,8 @@ spec:
               type: integer
             selector:
               type: object
+            shutdown:
+              type: boolean
           required:
           - selector
           type: object
