Add pod name in status

--- a/config/crds/chaos_v1beta1_nodefailureinjection.yaml
+++ b/config/crds/chaos_v1beta1_nodefailureinjection.yaml
@@ -44,12 +44,17 @@ spec:
         status:
           properties:
             injected:
-              format: int64
-              type: integer
-            nodeNames:
-              type: object
-          required:
-          - injected
+              items:
+                properties:
+                  node:
+                    type: string
+                  pod:
+                    type: string
+                required:
+                - node
+                - pod
+                type: object
+              type: array
           type: object
   version: v1beta1
 status:
