--- a/config/samples/chaos_v1beta1_nodefailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_nodefailureinjection.yaml
@@ -6,5 +6,7 @@ metadata:
   name: nodefailureinjection-sample
 spec:
   selector: # label selector to target pods
-    app: chaos-fi-demo-curl
-  quantity: 3 # number of pods to target (defaults to 1)
+    app: cassandra
+    cluster: cassandra-test
+  quantity: 1 # number of pods to target (defaults to 1)
+  shutdown: true # keep the host down (defaults to false, which means that the host will restart after the node failure)
