--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,18 +48,38 @@ build:make:
   script:
     - release.sh
 
-release-ref:
+release-manager-ref:
   <<: *release
   when: manual
   except:
     - tags
   variables:
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
+    DOCKERFILE_PATH: "./cmd/manager/"
 
-release-tag:
+release-manager-tag:
   <<: *release
   when: always
   only:
     - tags
   variables:
     TAG: "${CI_COMMIT_TAG}"
+    DOCKERFILE_PATH: "./cmd/manager/"
+
+release-injector-ref:
+  <<: *release
+  when: manual
+  except:
+    - tags
+  variables:
+    TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
+    DOCKERFILE_PATH: "./cmd/injector/"
+
+release-injector-tag:
+  <<: *release
+  when: always
+  only:
+    - tags
+  variables:
+    TAG: "${CI_COMMIT_TAG}"
+    DOCKERFILE_PATH: "./cmd/injector/"
