--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ release-manager-ref:
     - tags
   variables:
     TARGET: "manager"
+    IMAGE: "chaos-fi-controller"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
 release-manager-tag:
@@ -64,6 +65,7 @@ release-manager-tag:
     - tags
   variables:
     TARGET: "manager"
+    IMAGE: "chaos-fi-controller"
     TAG: "${CI_COMMIT_TAG}"
 
 release-injector-ref:
@@ -73,6 +75,7 @@ release-injector-ref:
     - tags
   variables:
     TARGET: "injector"
+    IMAGE: "chaos-fi"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
 release-injector-tag:
@@ -82,4 +85,5 @@ release-injector-tag:
     - tags
   variables:
     TARGET: "injector"
+    IMAGE: "chaos-fi"
     TAG: "${CI_COMMIT_TAG}"
