--- a/config/samples/chaos_v1beta1_nodefailureinjection.yaml
+++ b/config/samples/chaos_v1beta1_nodefailureinjection.yaml
@@ -6,7 +6,6 @@ metadata:
   name: nodefailureinjection-sample
 spec:
   selector: # label selector to target pods
-    app: cassandra
-    cluster: cassandra-test
+    app: demo
   quantity: 1 # number of pods to target (defaults to 1)
   shutdown: true # keep the host down (defaults to false, which means that the host will restart after the node failure)
