--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/chaos.datadoghq.com_networkfailureinjections.yaml
 - bases/chaos.datadoghq.com_nodefailureinjections.yaml
 - bases/chaos.datadoghq.com_networklatencyinjections.yaml
+- bases/chaos.datadoghq.com_disruptions.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_networkfailureinjections.yaml
 #- patches/webhook_in_nodefailureinjections.yaml
 #- patches/webhook_in_networklatencyinjections.yaml
+#- patches/webhook_in_disruptions.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_networkfailureinjections.yaml
 #- patches/cainjection_in_nodefailureinjections.yaml
 #- patches/cainjection_in_networklatencyinjections.yaml
+#- patches/cainjection_in_disruptions.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
