--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,6 +9,26 @@ rules:
 - apiGroups:
   - chaos.datadoghq.com
   resources:
+  - disruptions
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - chaos.datadoghq.com
+  resources:
+  - disruptions/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - chaos.datadoghq.com
+  resources:
   - networkfailureinjections
   verbs:
   - create
