--- a/config/crd/patches/cainjection_in_disruptions.yaml
+++ b/config/crd/patches/cainjection_in_disruptions.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: networklatencyinjections.chaos.datadoghq.com
+  name: disruptions.chaos.datadoghq.com
