--- a/config/crd/patches/webhook_in_disruptions.yaml
+++ b/config/crd/patches/webhook_in_disruptions.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: networkfailureinjections.chaos.datadoghq.com
+  name: disruptions.chaos.datadoghq.com
 spec:
   conversion:
     strategy: Webhook
