--- a/config/rbac/disruption_editor_role.yaml
+++ b/config/rbac/disruption_editor_role.yaml
@@ -1,13 +1,13 @@
-# permissions to do edit networklatencyinjections.
+# permissions to do edit disruptions.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: networklatencyinjection-editor-role
+  name: disruption-editor-role
 rules:
 - apiGroups:
   - chaos.datadoghq.com
   resources:
-  - networklatencyinjections
+  - disruptions
   verbs:
   - create
   - delete
@@ -19,7 +19,7 @@ rules:
 - apiGroups:
   - chaos.datadoghq.com
   resources:
-  - networklatencyinjections/status
+  - disruptions/status
   verbs:
   - get
   - patch
