--- a/config/rbac/disruption_viewer_role.yaml
+++ b/config/rbac/disruption_viewer_role.yaml
@@ -1,26 +1,20 @@
-# permissions to do edit networkfailureinjections.
+# permissions to do viewer disruptions.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: networkfailureinjection-editor-role
+  name: disruption-viewer-role
 rules:
 - apiGroups:
   - chaos.datadoghq.com
   resources:
-  - networkfailureinjections
+  - disruptions
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - chaos.datadoghq.com
   resources:
-  - networkfailureinjections/status
+  - disruptions/status
   verbs:
   - get
-  - patch
-  - update
