Allow to specify a list of hosts in a network failure

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -42,8 +42,10 @@ spec:
             networkFailure:
               description: NetworkFailureSpec represents a network failure injection
               properties:
-                host:
-                  type: string
+                hosts:
+                  items:
+                    type: string
+                  type: array
                 port:
                   type: integer
                 probability:
