--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -7,7 +7,8 @@ spec:
     app: demo
   count: 1 # number of pods to target (if set to 0 or not specified, it'll select all pods)
   networkFailure: # packet loss and connection drop
-    host: 10.0.0.0/8 # destination host
+    hosts:
+      - 10.0.0.0/8 # destination host
     probability: 100 # probability to drop packets
     port: 80 # port to drop packets on
     protocol: tcp # protocol to drop packets on (can be tcp or udp)
