--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ ci_build_env: &build_ci_env
     name: Build CI Environment
     command: |
       cd /usr/local
-      curl -L -O "https://github.com/kubernetes-sigs/kubebuilder/releases/download/v${KUBEBUILDER_VERSION}/kubebuilder_${KUBEBUILDER_VERSION}_linux_${KUBEBUILDER_ARCH}.tar.gz" 
+      curl -L -O "https://github.com/kubernetes-sigs/kubebuilder/releases/download/v${KUBEBUILDER_VERSION}/kubebuilder_${KUBEBUILDER_VERSION}_linux_${KUBEBUILDER_ARCH}.tar.gz"
       tar -zxvf kubebuilder_${KUBEBUILDER_VERSION}_linux_${KUBEBUILDER_ARCH}.tar.gz
       mv kubebuilder_${KUBEBUILDER_VERSION}_linux_${KUBEBUILDER_ARCH} kubebuilder
       curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v${GOLANGCI_LINT_VERSION}
@@ -34,10 +34,19 @@ jobs:
       - run:
           name: Test and Build
           command: make
-
+  dependencies:
+    <<: *job_template
+    steps:
+      - checkout
+      - run:
+          name: Ensure dependencies are up-to-date
+          command: |
+            go mod tidy
+            git diff --exit-code
 
 workflows:
   version: 2
   test_and_build:
     jobs:
       - build
+      - dependencies
